--- a/PITCHME.css
+++ b/PITCHME.css
@@ -1,7 +1,9 @@
 .reveal section img {
   border: 0;
   box-shadow: none;
-  max-height: 60vh;
+  max-height: 50vh;
+  max-width: 80vw;
+  margin: auto;
 }
 
 .comment {
