--- a/PITCHME.css
+++ b/PITCHME.css
@@ -14,6 +14,6 @@
     text-align: right;
 }
 
-.reveal .slides {
-    text-align: left;
-}
+/* .reveal .slides { */
+/*     text-align: left; */
+/* } */
