--- a/PITCHME.css
+++ b/PITCHME.css
@@ -4,6 +4,7 @@
   max-height: 50vh;
   max-width: 80vw;
   margin: auto;
+  display:block;
 }
 
 .comment {
@@ -14,6 +15,6 @@
     text-align: right;
 }
 
-/* .reveal .slides { */
-/*     text-align: left; */
-/* } */
+.reveal .slides {
+    text-align: left;
+}
