--- a/PITCHME.css
+++ b/PITCHME.css
@@ -6,10 +6,14 @@
   border: 0;
   box-shadow: none;
   max-height: 40vh;
-  max-width: 80vw;
+  max-width: 65vw;
   min-width: 25vw;
   margin: auto;
   display:block;
+}
+
+export_slide {
+  width: 100vw;
 }
 
 .comment {
